# blob-rs

./: Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
tests/: blob.rs
