[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
description = "Blob serialization/deserialization utilities"
categories = ["data-structures", "encoding"]
documentation = "https://docs.rs/blob/"
keywords = ["blob", "base64"]
license = "MIT"
name = "blob"
readme = "README.md"
repository = "https://github.com/novacrazy/blob-rs"
version = "0.1.1"

[dependencies]
base64 = "0.3.0"
serde = "0.9.6"

[dev-dependencies]
serde_derive = "0.9.6"
serde_json = "0.9.5"
