[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
categories = ["data-structures", "encoding"]
description = "Blob serialization/deserialization utilities"
documentation = "https://docs.rs/blob/"
keywords = ["blob", "base64"]
license = "MIT"
name = "blob"
readme = "README.md"
repository = "https://github.com/novacrazy/blob-rs"
version = "0.3.0"

[dependencies]
base64 = "0.12"
serde = "1"

[dev-dependencies]
serde_derive = "1.0.2"
serde_json = "1.0.1"
